--- a/src/pages/DaftarIsi/DaftarIsi.css
+++ b/src/pages/DaftarIsi/DaftarIsi.css
@@ -76,9 +76,24 @@ a {
 
 /*Quiz*/
 .quiz-button {
+    width: 98%;
     margin: 0 auto;
     display: block;
     margin-top: 10%;
+    padding: 3% 20%;
+
+    background-color: white;
+    border-radius: 200px;
+    border-width: 0;
+    font-size: 1em;
+    font-family: 'Montserrat', sans-serif;
+    font-weight: 700;
+}
+.faq-button {
+    width: 98%;
+    margin: 0 auto;
+    display: block;
+    margin-top: 5%;
     padding: 3% 25%;
 
     background-color: white;
