--- a/src/pages/Quiz/Quiz.css
+++ b/src/pages/Quiz/Quiz.css
@@ -71,12 +71,10 @@
 }
 
 .back-white-arrow {
-    position: absolute;
+    position: fixed;
+    bottom: 20px;   /* distance from bottom of the screen */
+    left: 20px;     /* distance from left (adjust as needed) */
     width: 8%;
-    bottom: 0;
-    left: 0;
-    margin-bottom: 10%;
-    margin-left: 5%;
 }
 
 /*Box Chat*/
@@ -91,11 +89,11 @@
     border-radius: 15px;
 }
 .box-chat {
-    width: 88%;
+    width: 80%;
     display: block;
     margin: 0 auto;
     position: relative;
-    top: -150px;
+    top: -180px;
 }
 .box-question {
     display: block;
@@ -134,7 +132,7 @@
     margin: 0 auto;
     text-align: center;
     margin-top: 10%;
-    color: white;
+    color: #2c2c2c;
     font-size: 1.2em;
     font-family: 'Montserrat', sans-serif;
     font-weight: 600;
@@ -152,7 +150,7 @@
     margin: 0 auto;
     margin-top: 10%;
     text-align: center;
-    font-size: 1.5em;
+    font-size: 1.3em;
     font-family: 'Montserrat', sans-serif;
     font-weight: 600;
     color: white;
