--- a/src/pages/Animasi/Animasi.css
+++ b/src/pages/Animasi/Animasi.css
@@ -2,9 +2,9 @@
     font-size: 1.2em;
     font-family: 'Montserrat', sans-serif;
     font-weight: 600;
-    color: white;
+    color: #2c2c2c;
     display: block;
-    margin-top: 20%;
+    margin-top: 45%;
     margin-left: 5%;
 }
 .video-animasi {
