semi-final build

--- a/src/pages/faq/faq.css
+++ b/src/pages/faq/faq.css
@@ -33,7 +33,7 @@
     width: 70%;
     font-size: 0.7em;
     font-family: 'Montserrat', sans-serif;
-    font-weight: 400;
+    font-weight: 600;
     color: #2c2c2c;
     margin-left: 7.7%;
 }
@@ -56,8 +56,8 @@
     text-align: justify;
     font-size: 0.7em;
     font-family: 'Montserrat', sans-serif;
-    font-weight: 100;
-    color: #2c2c2c;
+    font-weight: 300;
+    color: black;
     margin-left: 7.7%;
     margin-top: 1%;
     margin-bottom: -6%;
